Resolved issue #411 by setting a height and setting overflow-y to scroll on the css class.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -551,4 +551,6 @@ html, body {
 
 .dropdown-menu {
   margin-top: 10px;
+  height: 270px;
+  overflow-y: scroll;
 }
